<resources>
    <string name="app_name">MSO Planer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Einstellungen</string>
    <string name="room_number">Raum:</string>
    <string name="teacher">Lehrer:</string>
    <string name="subject">Fach:</string>
    <string name="number_of_subject">1.</string>
    <string name="name_of_app">MSO Planer</string>
    <string name="version_number">Version 0.0.1</string>
    <string name="timetable">Stundenplan</string>
    <string name="exams">Klausuren</string>
    <string name="exam">Klausur</string>
    <string name="homework">Hausaufgaben</string>
    <string name="main">Home</string>
    <string name="date">am:</string>
    <string name="until">Fällig bis zum:</string>
    <string name="notes">Notizen:</string>
    <string name="lessonDeletedMessage">Stunde entfernt!</string>
    <string name="lessonExistingMessage">Zu der gewählten Zeit besteht bereits eine Stunde. Bitte entferne diese zuerst.</string>
    <string name="subjectSavedMessage">Fach gespeichert</string>
    <string name="notSavedMessage">Entwurf verworfen</string>
    <string name="subjectExistingMessage">Dieses Fach gibt es schon</string>
    <string name="examSavedMessage">Klausur gespeichert</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_homework">Hausaufgaben</string>
    <string name="title_activity_time_table">Stundenplan</string>
    <string name="title_activity_exams">Klausuren</string>
    <string name="title_activity_main_tabbed">main_tabbed</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Einstellungen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
