<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.BlankFragment">

    <LinearLayout
        android:label="My Activity Title"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_collapseParallaxMultiplier="0.0"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="11dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            android:layout_height="wrap_content">

            <LinearLayout
                android:gravity="center"
                android:dividerPadding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.38"
                android:padding="10dp">

                <Button
                    android:layout_height="55dp"
                    android:id="@+id/color"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textSize="24sp"
                    android:background="@android:color/holo_blue_dark"
                    android:textColor="@color/cardview_light_background"
                    android:clickable="false"
                    android:layout_width="55dp" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:text="@string/exam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/subject"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="normal|bold"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:text="@string/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/date"
                        android:textAppearance="@android:style/TextAppearance.Material.Small"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:text="@string/notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/notes"
                        android:elevation="0dp" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>
