<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.Tablefragment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:label="My Activity Title"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_collapseParallaxMultiplier="0.0"
        android:weightSum="1">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            app:cardElevation="11dp"
            app:cardBackgroundColor="@color/cardview_light_background"
            android:layout_height="wrap_content">

            <LinearLayout
                android:dividerPadding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.38"
                android:padding="10dp">

                <Button
                    android:text="1."
                    android:layout_width="27dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/wqw"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textSize="24sp"
                    android:background="@android:color/holo_blue_dark"
                    android:textColor="@color/cardview_light_background"
                    android:clickable="false" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.38"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:text="@string/subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView11"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1">

                        <TextView
                            android:text="@string/room_number"
                            android:layout_width="124dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView12" />

                        <TextView
                            android:text="@string/teacher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView13"
                            android:layout_weight="0.38" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</FrameLayout>