<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.LessonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:label="My Activity Title"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_collapseParallaxMultiplier="0.0">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:layout_marginBottom="10px"
            android:layout_marginEnd="10px"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:layout_marginStart="10px"
            android:layout_marginTop="10px"
            app:cardBackgroundColor="@color/cardview_light_background"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.38"
                android:dividerPadding="8dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/color"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_dark"
                    android:clickable="false"
                    android:textAppearance="@android:style/TextAppearance.Material.Headline"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.38"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/subject"
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/upto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.45"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium"
                            android:textStyle="normal|bold" />

                        <TextView
                            android:id="@+id/room"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/room_number"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                        <TextView
                            android:id="@+id/teacher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:elevation="0dp"
                            android:paddingTop="0dp"
                            android:text="@string/teacher"
                            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>
